force-app/main/default/objects/insmassapp__MassApprovalConfiguration__mdt/insmassapp__MassApprovalConfiguration__mdt.object-meta.xml
<CustomObject>
    <label>Mass Approval Configuration</label>
    <pluralLabel>Mass Approval Configurations</pluralLabel>
</CustomObject>