force-app/main/default/objects/insmassapp__MassApprovalConfiguration__mdt/fields/insmassapp__ApprovalProcess__c.field-meta.xml
<CustomField>
    <fullName>insmassapp__ApprovalProcess__c</fullName>
    <inlineHelpText>Unique name of the related approval process. You can leave this field blank if the object has only one approval process.</inlineHelpText>
    <label>Approval Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>