force-app/main/default/objects/insmassapp__MassApprovalConfiguration__mdt/fields/insmassapp__AvailableFields__c.field-meta.xml
<CustomField>
    <fullName>insmassapp__AvailableFields__c</fullName>
    <label>Available Fields</label>
    <type>TextArea</type>
</CustomField>