force-app/main/default/objects/insmassapp__MassApprovalConfiguration__mdt/fields/insmassapp__DefaultFields__c.field-meta.xml
<CustomField>
    <fullName>insmassapp__DefaultFields__c</fullName>
    <inlineHelpText>Fill only for the &quot;Default&quot; metadata row.</inlineHelpText>
    <label>Default Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>