force-app/main/default/objects/insmassapp__MassApprovalConfiguration__mdt/fields/insmassapp__Fields__c.field-meta.xml
<CustomField>
    <fullName>insmassapp__Fields__c</fullName>
    <label>Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>