force-app/main/default/objects/insmassapp__MassApprovalConfiguration__mdt/fields/insmassapp__IsDisplayChatter__c.field-meta.xml
<CustomField>
    <fullName>insmassapp__IsDisplayChatter__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Display Chatter</label>
    <type>Checkbox</type>
</CustomField>