force-app/main/default/objects/insmassapp__MassApprovalConfiguration__mdt/fields/insmassapp__IsDisplayComments__c.field-meta.xml
<CustomField>
    <fullName>insmassapp__IsDisplayComments__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Display Comments</label>
    <type>Checkbox</type>
</CustomField>