force-app/main/default/objects/insmassapp__MassApprovalConfiguration__mdt/fields/insmassapp__IsDisplayView__c.field-meta.xml
<CustomField>
    <fullName>insmassapp__IsDisplayView__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Display View</label>
    <type>Checkbox</type>
</CustomField>