force-app/main/default/objects/insmassapp__MassApprovalConfiguration__mdt/fields/insmassapp__IsSelectedDefault__c.field-meta.xml
<CustomField>
    <fullName>insmassapp__IsSelectedDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selected Default</label>
    <type>Checkbox</type>
</CustomField>