force-app/main/default/objects/insmassapp__MassApprovalConfiguration__mdt/fields/insmassapp__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>insmassapp__ObjectName__c</fullName>
    <label>ObjectName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>