force-app/main/default/objects/insmassapp__MassApprovalConfiguration__mdt/fields/insmassapp__UseAllAsDefault__c.field-meta.xml
<CustomField>
    <fullName>insmassapp__UseAllAsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use All as Default</label>
    <type>Checkbox</type>
</CustomField>